singularity/benchmarks/jobs/error3280261.err
Traceback (most recent call last):
  File "main.py", line 23, in <module>
    from utils.benchmark import benchmark_routine
  File "/v2c/vox2cortex/utils/benchmark.py", line 233
    if hps['TEST_MODEL_EPOCH'] is not None hps['TEST_MODEL_EPOCH'] > 0:
                                             ^
SyntaxError: invalid syntax
